--- a/Pages/index.html
+++ b/Pages/index.html
@@ -29,41 +29,34 @@
                 </li>
             </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">HanLaotwo的个人网站</h3>
     </header>
 
     <main role="main" class="main">
 
         <div class="jumbotron">
-            <h1 class="display-3">Jumbotron heading</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac
-                cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+            <h1 class="display-3">Nothing To Show</h1>
+            <p class="lead">还没想好在这里放什么</p>
+            <p><a class="btn btn-lg btn-success" href="#" role="button">一个按钮</a></p>
         </div>
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4>Subheading</h4>
+                <h4><a href="article.html">博客</a></h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit
-                    amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+            <div class="col-lg-6">
+                <h4><a href="https://github.com/HanlaoTwo" >github</a></h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
             </div>
 
             <div class="col-lg-6">
-                <h4>Subheading</h4>
+                <h4><a href="https://twitter.com/HanLaotwo?lang=zh-cn">Twiter</a></h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit
-                    amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+            <div class="col-lg-6">
+                <h4><a href="https://github.com/HanlaoTwo" >项目</a></h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
             </div>
         </div>
 
