--- a/Pages/article.html
+++ b/Pages/article.html
@@ -18,9 +18,10 @@
 
 </body>
 
-<script type="text/javascript" src="js/marked.js"></script>
+<!--<script type="text/javascript" src="js/marked.js"></script>-->
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/showdown.js"></script>
+<link rel="stylesheet" type="text/css" href="code.css">
 
 <script style="text/javascript">
     getMarkDown()
@@ -44,10 +45,17 @@
             //dataType: "text",
             success: function (reslut) {
                 content = reslut;
+                showdown.setOption("omitExtraWLInCodeBlocks",true);
+                showdown.setOption("simpleLineBreaks",true);
+                //showdown.setOption("completeHTMLDocument",true);
+                showdown.setOption("ghCodeBlocks",true);
+                showdown.setOption("tasklists",true);
+                showdown.setOption("simplifiedAutoLink",true);
+                //showdown.setFlavor('github');
                 var converter = new showdown.Converter();
-                var text = '#hello, markdown!';
                 var html = converter.makeHtml(content);
-                document.getElementById('content').innerHTML = html;
+                console.log(converter.makeHtml(' ``` hhhhhh ``` '))
+                document.getElementById('content').innerHTML = converter.makeHtml(" ``` hhhhhh ``` ");
             }
         });
         /*$.ajax({
