--- a/Pages/htmls/index.html
+++ b/Pages/htmls/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>HanLaotwo--首页</title>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
 </head>
 
 <body>
