--- a/Pages/htmls/index/index.html
+++ b/Pages/htmls/index/index.html
@@ -9,7 +9,7 @@
 
     <title>HanLaotwo--首页</title>
     <link href="../../css/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="../../css/index.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4><a href="../blog/article.html">博客</a></h4>
+                <h4><a href="../blog/blog.html">博客</a></h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
             </div>
             <div class="col-lg-6">
